--- a/css/style.css
+++ b/css/style.css
@@ -257,13 +257,17 @@ h2 {
 
 /* info */
 .info {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
 	background-color: rgb(227, 224, 198);
 	width: 80vw;
 	margin-top: 2vh;
-	padding: 3vh 4vw;
+	padding: 3vh 0;
+}
+.info-container {
+	width: 72vw;
+	margin: 0 auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 h3 {
 	font-size: 1.5em;
@@ -322,8 +326,8 @@ h3 {
 		max-width: 70vw;
 	}
 	.info-schedule table {
-		margin: 0 auto;
-		max-width: 65vw;
+		/* margin: 0 auto; */
+		max-width: 72vw;
 		font-size: 0.9em;
 	}
 	.info-schedule table th {
@@ -332,7 +336,7 @@ h3 {
 	.info-schedule table td {
 		text-align: center;
 		color: #cca161;
-		font-size: 1.2em;
+		font-size: 1.1em;
 		background-color: #fff;
 	}
 }
